# holmes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.default.yaml  fix_tests.py  fix_tests2.py  insert_hooks.py  plan_subagent.py  test_reed.rs  test_reed2.rs
.hermes/plans/: 2026-06-20_165908-holmes-runtime-phase1.md
crates/holmes-browser/: Cargo.toml
crates/holmes-browser/src/: error.rs  lib.rs  manager.rs  profile.rs
crates/holmes-browser/tests/: manager.rs
crates/holmes-cli/: Cargo.toml
crates/holmes-cli/src/: agent_loop.rs  chat.rs  commands.rs  goal_loop.rs  lib.rs  main.rs  profile.rs  project_knowledge.rs  setup.rs  subagent.rs  tui.rs  workflows.rs
crates/holmes-cli/tests/: profile_tests.rs  slash_commands.rs  workflow_integration.rs
crates/holmes-core/: Cargo.toml
crates/holmes-core/src/: config.rs  directive.rs  error.rs  event.rs  hook.rs  lib.rs  session.rs  subagent.rs  tool_types.rs  types.rs  workflow.rs
crates/holmes-core/src/state/: builders.rs  immutable.rs  mod.rs  tool_truth.rs  validated.rs
crates/holmes-engine/: Cargo.toml
crates/holmes-engine/src/: engine.rs  lib.rs  prompt.rs  turn.rs
crates/holmes-engine/src/services/: advisor.rs  compressor.rs  hypothesis.rs  mod.rs  reflector.rs  repetition.rs
crates/holmes-goal/: Cargo.toml
crates/holmes-goal/src/: condition.rs  decomposer.rs  evaluator.rs  lib.rs  progress.rs
crates/holmes-goal/tests/: goal_tests.rs
crates/holmes-guards/: Cargo.toml
crates/holmes-guards/src/: lib.rs  traits.rs
crates/holmes-guards/src/post/: attack_surface.rs  evidence_extractor.rs  failure_tracker.rs  file_tracker.rs  mod.rs  skeptic_gate.rs  soft404.rs
crates/holmes-guards/src/pre/: dangerous_command.rs  file_tracker.rs  immutable_field.rs  mod.rs  repetition.rs
crates/holmes-harness/: Cargo.toml
crates/holmes-harness/src/: lib.rs  llm.rs  runner.rs  scenario.rs  tool.rs
crates/holmes-harness/tests/: scenario.rs
crates/holmes-llm/: Cargo.toml
crates/holmes-llm/src/: anthropic.rs  client.rs  error_classifier.rs  lib.rs  provider.rs  rate_limiter.rs  request.rs  response.rs  streaming.rs
crates/holmes-mind-palace/: Cargo.toml
crates/holmes-mind-palace/src/: consolidation.rs  context_layer.rs  context_stack.rs  dashboard_layer.rs  lib.rs  memory_layer.rs  retrieval.rs
crates/holmes-recon/: Cargo.toml
crates/holmes-recon/src/: auto_recon.rs.deferred  lib.rs
crates/holmes-reporter/: Cargo.toml
crates/holmes-reporter/src/: lib.rs  reporter.rs.deferred
crates/holmes-runtime/: Cargo.toml
crates/holmes-runtime/src/: action.rs  compaction.rs  context.rs  decision.rs  deduction.rs  deliberation.rs  dialogue.rs  evidence.rs  learning.rs  lib.rs  memory.rs  middleware.rs  perception.rs  permissions.rs  reflection.rs  runtime.rs  summary.rs  yield_stream.rs
crates/holmes-runtime/src/deduction/: projection.rs  reducer.rs  validator.rs
crates/holmes-runtime/src/hooks/: checkpoint.rs
crates/holmes-session/: Cargo.toml
crates/holmes-session/src/: compaction_archive.rs  db.rs  fts.rs  lib.rs  memory_store.rs  replay.rs  schema.rs  selector.rs  store.rs  write_contention.rs
crates/holmes-session/tests/: session_tests.rs
crates/holmes-skills/: Cargo.toml
crates/holmes-skills/src/: lib.rs  skill_evolver.rs.deferred  skill_store.rs.deferred
crates/holmes-subagent/: Cargo.toml
crates/holmes-subagent/src/: dispatcher.rs  lib.rs  protocol.rs  types.rs
crates/holmes-subagent/src/agents/: mod.rs
crates/holmes-tools/: Cargo.toml
crates/holmes-tools/src/: lib.rs  registry.rs
crates/holmes-tools/src/builtin/: browser.rs  execute_command.rs  execute_python.rs  http_request.rs  hypothesis.rs  mod.rs  report_finding.rs  report_progress.rs  report_recon.rs  subagent.rs
crates/holmes-tools/src/mcp/: mod.rs  protocol.rs  transport.rs
docs/: HOLMES.md  harness.md
docs/plans/: 2026-06-22-case-compactor.md
docs/superpowers/plans/: 2026-06-29-session-semantic-kernel.md  2026-06-30-native-browser.md
docs/superpowers/specs/: 2026-06-20-holmes-runtime-design.md  2026-06-21-holmes-learning-and-compression-spec.md  2026-06-23-holmes-agent-sdk-gap-spec.md  2026-06-23-holmes-cognitive-kernel-spec.md  2026-06-29-session-semantic-kernel-design.md  2026-06-30-native-browser-design.md
scenarios/: artifact-tool.yaml  basic-answer.yaml  basic-tool.yaml  deductive-llm-trace.yaml  deductive-login-enumeration.yaml  deductive-login-no-enumeration.yaml  interactive-ask-watson.yaml  learning-correction.yaml  long-compression.yaml
scenarios/fixtures/http/: login-response.json
skills/pentest-lyan/: README.md  SKILL.md
