[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
