[package]
name = "holmes-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
holmes-core = { path = "../holmes-core" }
chromiumoxide = { version = "0.9", default-features = false }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
