[package]
name = "holmes-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "holmes"
path = "src/main.rs"

[dependencies]
holmes-core = { path = "../holmes-core" }
holmes-session = { path = "../holmes-session" }
holmes-mind-palace = { path = "../holmes-mind-palace" }
holmes-llm = { path = "../holmes-llm" }
holmes-tools = { path = "../holmes-tools" }
holmes-guards = { path = "../holmes-guards" }
holmes-runtime = { path = "../holmes-runtime" }
holmes-harness = { path = "../holmes-harness" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
rpassword = "7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
reedline = "0.48.0"
crossterm = "0.29.0"
