[package]
name = "holmes-guards"
version = "0.1.0"
edition = "2021"

[dependencies]
holmes-core = { path = "../holmes-core" }
holmes-tools = { path = "../holmes-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
