[package]
name = "holmes-session"
version = "0.1.0"
edition = "2021"

[dependencies]
holmes-core = { path = "../holmes-core" }
holmes-llm = { path = "../holmes-llm" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
